--- a/noticias.html
+++ b/noticias.html
@@ -103,7 +103,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="NoticiasCarpeta/Parche.html" class="news-image">
+    <a href="Parche.html" class="news-image">
       <img src="patch-image.png" alt="Patch Notes" />
       <div class="loading-overlay">Cargando...</div>
     </a>
