--- a/parche.html
+++ b/parche.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Registro del Parche - 25 de Mayo de 2025</title>
   <style>
     body {
@@ -10,6 +10,23 @@
       color: #111;
       margin: 0;
       padding: 0;
+    }
+
+    header {
+      background-color: #1a1a1a;
+      padding: 10px 0;
+      text-align: center;
+    }
+
+    header nav a {
+      color: #f2f2f2;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    header nav a:hover {
+      text-decoration: underline;
     }
 
     .container {
@@ -67,6 +84,13 @@
   </style>
 </head>
 <body>
+  <header>
+    <nav>
+      <a href="Index.html">Inicio</a>
+      <a href="Noticias.html">Noticias</a>
+    </nav>
+  </header>
+
   <div class="container">
     <h1>Registro del Parche - 25 de Mayo de 2025</h1>
     <div class="date">Publicado el 24 de mayo de 2025 - Escrito por Adeveloper_games</div>
@@ -76,19 +100,19 @@
     <h2>Ajustes: Juego Base - Novedades</h2>
     <ul>
       <li>Se ha agregado el sistema de economía en el juego</li>
-<li>Se ha agregado y reemplazado el sistema de armas</li>
-<li>Se ha deshabilitado temporalmente algunos vehículos</li>
-<li>Algunos apartados del menú siguen deshabilitados</li>
+      <li>Se ha agregado y reemplazado el sistema de armas</li>
+      <li>Se ha deshabilitado temporalmente algunos vehículos</li>
+      <li>Algunos apartados del menú siguen deshabilitados</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Optimización al 100% Completada</h2>
     <ul>
       <li style="margin-top: 20px;">Tras un gran y duro esfuerzo se ha conseguido optimizar los siguientes scripts:
         <ul>
-          <li>‘Sistema de Coches’</li>
-          <li>‘Sistema de Armas’</li>
-          <li>‘Sistema de Iluminación’</li>
-          <li>‘Sistema de Interfaz Automática’</li>
+          <li>'Sistema de Coches'</li>
+          <li>'Sistema de Armas'</li>
+          <li>'Sistema de Iluminación'</li>
+          <li>'Sistema de Interfaz Automática'</li>
         </ul>
       </li>
     </ul>
