--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
   <header>
     <h1>Aragón RP</h1>
     <nav>
-      <a href="Index.html">Inicio</a>
-      <a href="Noticias.html">Noticias</a>
-      <a href="Comunidad.html" class="mantenimiento" data-tooltip="En desarrollo">Comunidad</a>
-      <a href="Tienda.html" class="mantenimiento" data-tooltip="En desarrollo">Tienda</a>
+      <a href="index.html">Inicio</a>
+      <a href="noticias.html">Noticias</a>
+      <a href="comunidad.html" class="mantenimiento" data-tooltip="En desarrollo">Comunidad</a>
+      <a href="tienda.html" class="mantenimiento" data-tooltip="En desarrollo">Tienda</a>
     </nav>
   </header>
 
