--- a/noticias.html
+++ b/noticias.html
@@ -111,7 +111,7 @@
       <div class="date">25/5/2025</div>
       <h2>Parche de Optimización General - 25 de Mayo, 2025</h2>
       <p>El 25 de Mayo, agregaremos un parche que permitirá a Aragón ser optimizado de una manera impresionante buscando el objetivo de que la experiencia de todos los usuarios sea explendida.</p>
-      <a href="Parche.html" class="read-more">Leer más</a>
+      <a href="parche.html" class="read-more">Leer más</a>
     </div>
   </div>
 
