--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
   <header>
     <h1>Aragón RP</h1>
     <nav>
-      <a href="PáginaWeb - Aragón/index.html">Inicio</a>
-      <a href="PáginaWeb - Aragón/noticias.html">Noticias</a>
+      <a href="index.html">Inicio</a>
+      <a href="noticias.html">Noticias</a>
       <a href="comunidad.html" class="mantenimiento" data-tooltip="En desarrollo">Comunidad</a>
       <a href="tienda.html" class="mantenimiento" data-tooltip="En desarrollo">Tienda</a>
     </nav>
