--- a/parche.html
+++ b/parche.html
@@ -86,8 +86,8 @@
 <body>
   <header>
     <nav>
-      <a href="Index.html">Inicio</a>
-      <a href="Noticias.html">Noticias</a>
+      <a href="https://adevelopergames.github.io/aragon-rp-web/">Inicio</a>
+      <a href="https://adevelopergames.github.io/aragon-rp-web/noticias.html">Noticias</a>
     </nav>
   </header>
 
