--- a/noticias.html
+++ b/noticias.html
@@ -109,9 +109,9 @@
     </a>
     <div class="news-content">
       <div class="date">25/5/2025</div>
-      <h2>Parche de Optimización General - 25 de Mayo, 2025</h2>
-      <p>El 25 de Mayo, agregaremos un parche que permitirá a Aragón ser optimizado de una manera impresionante buscando el objetivo de que la experiencia de todos los usuarios sea explendida.</p>
-      <a href="parche.html" class="read-more">Leer más</a>
+      <h2>Parche de Optimización General - Mes de Mayo, 2025</h2>
+      <p>En el mes de Mayo, agregaremos un parche que permitirá a Aragón ser remasterizado de una manera impresionante buscando el objetivo de formar parte de la comunidad de rol de Roblox.</p>
+      <a href="parche.html" class="read-more">Leer notas del parche</a>
     </div>
   </div>
 
