--- a/parche.html
+++ b/parche.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Registro del Parche - 25 de Mayo de 2025</title>
+  <title>Registro del Parche - Mes de Mayo del 2025</title>
   <style>
     body {
       font-family: 'Georgia', serif;
@@ -92,27 +92,29 @@
   </header>
 
   <div class="container">
-    <h1>Registro del Parche - 25 de Mayo de 2025</h1>
+    <h1>Registro del Parche - Mes de Mayo de 2025</h1>
     <div class="date">Publicado el 24 de mayo de 2025 - Escrito por Adeveloper_games</div>
+    <div class="date">Modificado el 25 de mayo de 2025 por Adeveloper_games</div>
 
-    <p>La actualización comenzará a implementarse a las 17:00 PM ESP del domingo 25 de mayo.</p>
+    <p>La actualización se implementará por la tarde en la última semana de Mayo.</p>
 
     <h2>Ajustes: Juego Base - Novedades</h2>
     <ul>
       <li>Se ha agregado el sistema de economía en el juego</li>
       <li>Se ha agregado y reemplazado el sistema de armas</li>
-      <li>Se ha deshabilitado temporalmente algunos vehículos</li>
-      <li>Algunos apartados del menú siguen deshabilitados</li>
+      <li>Se ha deshabilitado temporalmente algunos vehículos que causaban errores</li>
+      <li>Se ha rehabilitado al completo el menú</li>
     </ul>
 
-    <h2>Ajustes: Juego Base - Optimización al 100% Completada</h2>
+    <h2>Ajustes: Juego Base - Optimización</h2>
     <ul>
-      <li style="margin-top: 20px;">Tras un gran y duro esfuerzo se ha conseguido optimizar los siguientes scripts:
+      <li>
         <ul>
-          <li>'Sistema de Coches'</li>
-          <li>'Sistema de Armas'</li>
-          <li>'Sistema de Iluminación'</li>
-          <li>'Sistema de Interfaz Automática'</li>
+          <li>'Se han optimizado 78 scripts en el sistema de coches'</li>
+          <li>'Se han optimizado más de 850 scripts en el sistema de armas'</li>
+          <li>'Se ha eliminado todo tipo de iluminación volumétrica en el mapa'</li>
+          <li>'Se han optimizado alrededor de 10 scripts en la interfaz de ususario'</li>
+          <li>'Se ha levantado un muro invisible en todo el mapa para limitar su tamaño'</li>
         </ul>
       </li>
     </ul>
@@ -120,6 +122,9 @@
     <h2>Ajustes: Juego Base - Errores Solucionados</h2>
     <ul>
       <li>Se ha eliminado todo el terreno construido sustituyéndolo por un bloque normal y corriente.</li>
+      <li>Se ha eliminado la gasolinera REPSOL</li>
+      <li>Se ha eliminado el sistema de armas ACS</li>
+      <li>Se ha desactivado la colisión de algunas señales de tráfico</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Señales de Conducción</h2>
