--- a/noticias.html
+++ b/noticias.html
@@ -108,7 +108,7 @@
       <div class="loading-overlay">Cargando...</div>
     </a>
     <div class="news-content">
-      <div class="date">25/5/2025</div>
+      <div class="date">ÚLTIMA SEMANA DE MAYO</div>
       <h2>Parche de Optimización General - Mes de Mayo, 2025</h2>
       <p>En el mes de Mayo, agregaremos un parche que permitirá a Aragón ser remasterizado de una manera impresionante buscando el objetivo de formar parte de la comunidad de rol de Roblox.</p>
       <a href="parche.html" class="read-more">Leer notas del parche</a>
