--- a/noticias.html
+++ b/noticias.html
@@ -104,7 +104,7 @@
 <body>
   <div class="container">
     <a href="parche.html" class="news-image">
-      <img src="patch-image.png" alt="Patch Notes" />
+      <img src="parche-finalmayo.png" alt="Patch Notes" />
       <div class="loading-overlay">Cargando...</div>
     </a>
     <div class="news-content">
