--- a/parche.html
+++ b/parche.html
@@ -93,8 +93,7 @@
 
   <div class="container">
     <h1>Registro del Parche - Mes de Mayo de 2025</h1>
-    <div class="date">Publicado el 24 de mayo de 2025 - Escrito por Adeveloper_games</div>
-    <div class="date">Modificado el 25 de mayo de 2025 por Adeveloper_games</div>
+    <div class="date">Publicado el 24 de mayo, Modificado el 25 de mayo del 2025 y Escrito por Adeveloper_games</div>
 
     <p>La actualización se implementará por la tarde en la última semana de Mayo.</p>
 
