--- a/noticias.html
+++ b/noticias.html
@@ -109,10 +109,10 @@
       <div class="loading-overlay">Cargando...</div>
     </a>
     <div class="news-content">
-      <div class="date">PRIMERA SEMANA DE JUNIO</div>
-      <h2>Actualización Personalizable - Mes de Junio, 2025</h2>
-      <p>En este mes de Junio, introducimos contenido personalizable que permitirá a los usuarios modificar ciertos aspectos del juego a su gusto, abriendo las puertas a una experiencia más inmersiva.</p>
-      <a href="junio.html" class="read-more">Leer notas del parche</a>
+      <div class="date">DOMINGO 28 DE JUNIO</div>
+      <h2>Actualización de Contenido Masivo - Mes de Junio, 2025</h2>
+      <p>En este mes de Junio, introducimos contenido y reformamos la ciudad de Aragón como nunca visto. Pido disculpas de mi parte hacía todas las personas que esperaron dicha actualización durante tanto tiempo.</p>
+      <a href="junio.html" class="read-more">Leer notas del parche reciente</a>
     </div>
   </div>
 
@@ -126,7 +126,7 @@
       <div class="date">ÚLTIMA SEMANA DE MAYO</div>
       <h2>Parche de Optimización General - Mes de Mayo, 2025</h2>
       <p>En el mes de Mayo, agregaremos un parche que permitirá a Aragón ser remasterizado de una manera impresionante buscando el objetivo de formar parte de la comunidad de rol de Roblox.</p>
-      <a href="parche.html" class="read-more">Leer notas del parche</a>
+      <a href="parche.html" class="read-more">Leer notas del parche pasado</a>
     </div>
   </div>
 
