--- a/noticias.html
+++ b/noticias.html
@@ -104,12 +104,12 @@
 
   <!-- RECUADRO DE JUNIO -->
   <div class="container">
-    <a href="junio.html" class="news-image">
+    <a href="parche-junio.html" class="news-image">
       <img src="parche-junio.png" alt="Patch Notes Junio" />
       <div class="loading-overlay">Cargando...</div>
     </a>
     <div class="news-content">
-      <div class="date">DOMINGO 28 DE JUNIO</div>
+      <div class="date">DOMINGO 29 DE JUNIO</div>
       <h2>Actualización de Contenido Masivo - Mes de Junio, 2025</h2>
       <p>En este mes de Junio, introducimos contenido y reformamos la ciudad de Aragón como nunca visto. Pido disculpas de mi parte hacía todas las personas que esperaron dicha actualización durante tanto tiempo.</p>
       <a href="junio.html" class="read-more">Leer notas del parche reciente</a>
