parche-junio.html

--- a/parche-junio.html
+++ b/parche-junio.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Registro del Parche - Mes de Mayo del 2025</title>
+  <title>Registro del Parche - Mes de Junio del 2025</title>
   <style>
     body {
       font-family: 'Georgia', serif;
@@ -92,27 +92,31 @@
   </header>
 
   <div class="container">
-    <h1>Registro del Parche - Mes de Mayo de 2025</h1>
-    <div class="date">Publicado el 24 de mayo, Modificado el 25 de mayo del 2025 y Escrito por Adeveloper_games</div>
+    <h1>Registro del Parche - Mes de Junio de 2025</h1>
+    <div class="date">Publicado el 5 de junio, Modificado última vez el 5 de junio del 2025 y Escrito por Adeveloper_games</div>
 
-    <p>La actualización se implementará por la tarde en la última semana de Mayo.</p>
+    <p>La actualización se implementará por la tarde el Domingo 29 de Junio.</p>
 
     <h2>Ajustes: Juego Base - Novedades</h2>
     <ul>
-      <li>Se ha agregado el sistema de economía en el juego</li>
+      <li>Se han agregado nuevas edificaciones, varias de ellas con interior incluido</li>
       <li>Se ha agregado y reemplazado el sistema de armas</li>
-      <li>Se ha deshabilitado temporalmente algunos vehículos que causaban errores</li>
-      <li>Se ha rehabilitado al completo el menú</li>
+      <li>Se ha remasterizado al completo el sistema de coches</li>
+      <li>Se ha abierto un nuevo concesionario en el pueblo de Lumpiaque</li>
+      <li>Se ha creado un nuevo sistema de economia sustituyendo al que había en el servidor</li>
+      <li>Se han cerrado las fronteras del país debido al mantenimiento del Aeropuerto</li>
+      <li>Se han abierto y creado nuevas entradas/salidas para la autovía</li>
+      <li>Se han revisado y moderado las señales de la autovía</li>
+      <li>Se han cerrado varias carreteras que están en construcción</li>
+      <li>Se ha modificado el menú</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Optimización</h2>
     <ul>
       <li>
         <ul>
-          <li>'Se han optimizado 78 scripts en el sistema de coches'</li>
-          <li>'Se han optimizado más de 850 scripts en el sistema de armas'</li>
-          <li>'Se ha eliminado todo tipo de iluminación volumétrica en el mapa'</li>
-          <li>'Se han optimizado alrededor de 10 scripts en la interfaz de ususario'</li>
+          <li>'Se han optimizado todos y cada uno de los sistemas del juego'</li>
+          <li>'Se han optimizado diversos errores gráficos en las carreteras'</li>
           <li>'Se ha levantado un muro invisible en todo el mapa para limitar su tamaño'</li>
         </ul>
       </li>
@@ -124,6 +128,7 @@
       <li>Se ha eliminado la gasolinera REPSOL</li>
       <li>Se ha eliminado el sistema de armas ACS</li>
       <li>Se ha desactivado la colisión de algunas señales de tráfico</li>
+      <li>Se ha aumentado la velocidad del autobús</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Señales de Conducción</h2>
