--- a/noticias.html
+++ b/noticias.html
@@ -131,30 +131,33 @@
   </div>
 
   <script>
-    function handleDelayedRedirect(event) {
+  document.querySelectorAll('.news-image, .read-more').forEach(link => {
+    link.addEventListener('click', function (event) {
       event.preventDefault();
-      const link = event.currentTarget;
-      const href = link.getAttribute('href');
+      const href = this.getAttribute('href');
 
-      if (link.classList.contains('read-more')) {
-        const originalText = link.textContent;
-        link.textContent = 'Cargando...';
-      } else if (link.classList.contains('news-image')) {
-        const overlay = link.querySelector('.loading-overlay');
+      // Efecto visual si es una imagen
+      if (this.classList.contains('news-image')) {
+        const overlay = this.querySelector('.loading-overlay');
         if (overlay) {
           overlay.classList.add('active');
         }
       }
 
+      // Efecto visual si es "Leer más"
+      if (this.classList.contains('read-more')) {
+        this.textContent = 'Cargando...';
+        this.style.pointerEvents = 'none';
+        this.style.opacity = '0.6';
+      }
+
+      // Redirección con retraso
       setTimeout(() => {
         window.location.href = href;
       }, 2000);
-    }
-
-    document.querySelectorAll('.news-image, .read-more').forEach(link => {
-      link.addEventListener('click', handleDelayedRedirect);
     });
-  </script>
+  });
+</script>
 
 </body>
 </html>
