--- a/noticias.html
+++ b/noticias.html
@@ -83,41 +83,15 @@
       color: #444;
     }
 
-    .read-more {
+    .read-more-info {
       font-size: 1rem;
-      color: #b69200;
-      text-decoration: underline;
-      cursor: pointer;
-      width: fit-content;
-      display: inline-flex;
-      align-items: center;
-    }
-
-    .read-more:hover {
       color: #8a6c00;
+      font-style: italic;
+      margin-top: 10px;
     }
 
     a {
       text-decoration: none;
-    }
-
-    /* Spinner estilo */
-    .spinner {
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      border: 3px solid #b69200;
-      border-top: 3px solid transparent;
-      border-radius: 50%;
-      animation: spin 0.8s linear infinite;
-      vertical-align: middle;
-      margin-left: 8px;
-    }
-
-    @keyframes spin {
-      to {
-        transform: rotate(360deg);
-      }
     }
   </style>
 </head>
@@ -133,7 +107,7 @@
       <div class="date">DOMINGO 29 DE JUNIO</div>
       <h2>Actualización de Contenido Masivo - Mes de Junio, 2025</h2>
       <p>En este mes de Junio, introducimos contenido y reformamos la ciudad de Aragón como nunca visto. Pido disculpas de mi parte hacía todas las personas que esperaron dicha actualización durante tanto tiempo.</p>
-      <a href="junio.html" class="read-more">Leer notas del parche reciente</a>
+      <div class="read-more-info">¡Pulsa en la imagen para saber más!</div>
     </div>
   </div>
 
@@ -147,32 +121,20 @@
       <div class="date">ÚLTIMA SEMANA DE MAYO</div>
       <h2>Parche de Optimización General - Mes de Mayo, 2025</h2>
       <p>En el mes de Mayo, agregaremos un parche que permitirá a Aragón ser remasterizado de una manera impresionante buscando el objetivo de formar parte de la comunidad de rol de Roblox.</p>
-      <a href="parche.html" class="read-more">Leer notas del parche pasado</a>
+      <div class="read-more-info">¡Pulsa en la imagen para saber más!</div>
     </div>
   </div>
 
   <script>
-    document.querySelectorAll('.news-image, .read-more').forEach(link => {
+    // Solo mantiene la función para el overlay al hacer clic en la imagen
+    document.querySelectorAll('.news-image').forEach(link => {
       link.addEventListener('click', function (event) {
-        event.preventDefault();
+        const overlay = this.querySelector('.loading-overlay');
+        if (overlay) {
+          overlay.classList.add('active');
+        }
+
         const href = this.getAttribute('href');
-
-        // Imagen: overlay visible
-        if (this.classList.contains('news-image')) {
-          const overlay = this.querySelector('.loading-overlay');
-          if (overlay) {
-            overlay.classList.add('active');
-          }
-        }
-
-        // Leer más: texto + spinner
-        if (this.classList.contains('read-more')) {
-          this.innerHTML = 'Cargando... <span class="spinner"></span>';
-          this.style.pointerEvents = 'none';
-          this.style.opacity = '0.7';
-        }
-
-        // Redirigir tras 2 segundos
         setTimeout(() => {
           window.location.href = href;
         }, 2000);
