--- a/noticias.html
+++ b/noticias.html
@@ -126,9 +126,10 @@
   </div>
 
   <script>
-    // Solo mantiene la función para el overlay al hacer clic en la imagen
+    // Efecto de "Cargando..." al hacer clic en la imagen
     document.querySelectorAll('.news-image').forEach(link => {
       link.addEventListener('click', function (event) {
+        event.preventDefault();
         const overlay = this.querySelector('.loading-overlay');
         if (overlay) {
           overlay.classList.add('active');
