parche-junio.html

--- a/parche-junio.html
+++ b/parche-junio.html
@@ -93,48 +93,44 @@
 
   <div class="container">
     <h1>Registro del Parche - Mes de Junio de 2025</h1>
-    <div class="date">Publicado el 5 de junio, Modificado por última vez el 6 de junio del 2025 y Escrito por Adeveloper_games</div>
+    <div class="date">Publicado el 5 de junio, Modificado por última vez el 29 de junio del 2025 y Escrito por Adeveloper_games</div>
 
-    <p>La actualización se implementará por la tarde el Domingo 29 de Junio.</p>
+    <p>La actualización se implementará a las 16:00pm en horario Español el Domingo 29 de Junio.</p>
 
     <h2>Ajustes: Juego Base - Novedades</h2>
     <ul>
       <li>Se han agregado nuevas edificaciones, varias de ellas con interior incluido</li>
-      <li>Se ha agregado y reemplazado el sistema de armas</li>
-      <li>Se ha remasterizado al completo el sistema de coches</li>
-      <li>Se ha abierto un nuevo concesionario en el pueblo de Lumpiaque</li>
+      <li>Todas las edificaciones con interior son vendibles. Para comprarlas, preguntad en el servidor</li>
+      <li>Se está remasterizando poco a poco el sistema de coches</li>
+      <li>Se ha abierto un nuevo concesionario en las afueras del pueblo general</li>
       <li>Se ha remasterizado el edificio de la CNP</li>
-      <li>Se ha creado una nueva plaza central permitiendo cruzar Aragón más rápido</li>
-      <li>Se ha creado un nuevo sistema de economia sustituyendo al que había en el servidor</li>
-      <li>Se han cerrado las fronteras del país debido al mantenimiento del Aeropuerto</li>
-      <li>Se han abierto y creado nuevas entradas/salidas para la autovía</li>
-      <li>Se ha creado 1 nueva salida para una de las rotondas de la autovía</li>
-      <li>Se han revisado y moderado las señales de la autovía</li>
-      <li>Se han cerrado varias carreteras que están en construcción</li>
-      <li>Se ha modificado la cámara del Menú</li>
-      <li>Se ha reducido el tiempo de la pantalla de carga</li>
+      <li>Se ha creado una nueva plaza central permitiendo cruzar el pueblo general más rápido</li>
+      <li>Se está creando un nuevo sistema de economia sustituyendo al que había en el servidor</li>
+      <li>Se ha cerrado el Aeropuerto debido a varias tareas de mantenimiento</li>
+      <li>Se ha creado 1 nueva salida que todavía está en contrucción para la "Rotonda de España"</li>
+      <li>Se han revisado y moderado algunas de las señales de la autovía</li>
+      <li>Se han cerrado varias carreteras que estrán en construcción</li>
+      <li>Se ha eliminado el Equipo de "Criminales" para evitar el MetaGaming entre jugadores</li>
+      <li>Este parche se ha oficializado como "Parche de Contenido PROGRESIVO"</li>
+      <li>El ayuntamiento de Aragón ha ejecutado las primeras obras de un ferrocarril Aragonés</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Optimización</h2>
     <ul>
-      <li>
-        <ul>
-          <li>Se han optimizado todos y cada uno de los sistemas del juego</li>
-          <li>Se han adaptado todas las nuevas interfaces para otros dispositivos</li>
-          <li>Se han optimizado diversos errores gráficos en las carreteras</li>
-          <li>Se ha levantado un muro invisible en todo el mapa para limitar su tamaño</li>
-        </ul>
-      </li>
+      <li>Se ha modificado la cámara del Menú</li>
+      <li>Se ha reducido el tiempo de la pantalla de carga</li>
+      <li>Se han optimizado todos y cada uno de los sistemas del juego</li>
+      <li>Se han adaptado todas las nuevas interfaces para otros dispositivos</li>
+      <li>Se han optimizado diversos errores gráficos en las carreteras</li>
+      <li>Se ha levantado un muro invisible en todo el mapa para limitar su tamaño</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Errores Solucionados</h2>
     <ul>
       <li>Se ha eliminado todo el terreno construido sustituyéndolo por un bloque normal y corriente.</li>
-      <li>Se ha eliminado la gasolinera REPSOL temporalmente</li>
+      <li>Se ha eliminado la gasolinera REPSOL permanentemente</li>
       <li>Se ha eliminado el sistema de armas "ACS"</li>
       <li>Se ha desactivado la colisión de algunas señales de tráfico</li>
-      <li>Se ha aumentado la velocidad del autobús</li>
-      <li>Se ha buffeado la velocidad de giro del autobús</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Señales de Conducción</h2>
