--- a/parche-junio.html
+++ b/parche-junio.html
@@ -93,50 +93,47 @@
 
   <div class="container">
     <h1>Registro del Parche - Mes de Junio de 2025</h1>
-    <div class="date">Publicado el 5 de junio, Modificado por última vez el 29 de junio del 2025 y Escrito por Adeveloper_games</div>
+    <div class="date">Publicado el 5 de junio, Modificado por última vez el 7 de julio del 2025 - Escrito por Adeveloper_games</div>
 
-    <p>La actualización se implementará a las 16:00pm en horario Español el Domingo 29 de Junio.</p>
+    <p>La actualización se implementó a las 16:00pm en horario Español el Domingo 29 de Junio.</p>
 
     <h2>Ajustes: Juego Base - Novedades</h2>
     <ul>
       <li>Se han agregado nuevas edificaciones, varias de ellas con interior incluido</li>
-      <li>Todas las edificaciones con interior son vendibles. Para comprarlas, preguntad en el servidor</li>
-      <li>Se está remasterizando poco a poco el sistema de coches</li>
-      <li>Se ha abierto un nuevo concesionario en las afueras del pueblo general</li>
-      <li>Se ha remasterizado el edificio de la CNP</li>
-      <li>Se ha creado una nueva plaza central permitiendo cruzar el pueblo general más rápido</li>
-      <li>Se está creando un nuevo sistema de economia sustituyendo al que había en el servidor</li>
-      <li>Se ha cerrado el Aeropuerto debido a varias tareas de mantenimiento</li>
-      <li>Se ha creado 1 nueva salida que todavía está en contrucción para la "Rotonda de España"</li>
-      <li>Se han revisado y moderado algunas de las señales de la autovía</li>
-      <li>Se han cerrado varias carreteras que estrán en construcción</li>
-      <li>Se ha eliminado el Equipo de "Criminales" para evitar el MetaGaming entre jugadores</li>
-      <li>Este parche se ha oficializado como "Parche de Contenido PROGRESIVO"</li>
-      <li>El ayuntamiento de Aragón ha ejecutado las primeras obras de un ferrocarril Aragonés</li>
+      <li>Todas las edificaciones con interior son vendibles. Para comprarlas, preguntad en el servidor de discord.</li>
+      <li>Se ha remasterizado el sistema de coches.</li>
+      <li>Se ha abierto un nuevo concesionario en las afueras de Zaragozal.</li>
+      <li>Se ha remasterizado el edificio de la CNP.</li>
+      <li>Se han reactivado y remasterizado los uniformes de la CNP.</li>
+      <li>El Ayuntamiento de Aragón, ha financiado una nueva plaza central permitiendo cruzar Zaragoza más rápido.</li>
+      <li>Se ha creado un nuevo sistema de economía integrado en el juego.</li>
+      <li>Se ha agregado una aptitud al sistema de economía de pagos automáticos por trabajo.</li>
+      <li>Se ha cerrado el Aeropuerto debido a varias tareas en carreteras.</li>
+      <li>Se ha creado 1 nueva salida que todavía está en contrucción para la "Rotonda de España".</li>
+      <li>Se han revisado y moderado algunas de las señales de la autovía.</li>
+      <li>Se han cerrado varias carreteras que están en construcción.</li>
+      <li>Se ha eliminado el Equipo de "Criminales" para evitar el MetaGaming entre jugadores.</li>
+      <li>Este parche se ha oficializado como "Parche de Contenido PROGRESIVO".</li>
+      <li>El ayuntamiento de Aragón ha ejecutado las primeras obras de un ferrocarril Aragonés.</li>
+      <li>Se ha creado un nuevo banco telepático para poder hacer transferencias entre jugadores de dinero.</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Optimización</h2>
     <ul>
-      <li>Se ha modificado la cámara del Menú</li>
-      <li>Se ha reducido el tiempo de la pantalla de carga</li>
-      <li>Se han optimizado todos y cada uno de los sistemas del juego</li>
-      <li>Se han adaptado todas las nuevas interfaces para otros dispositivos</li>
-      <li>Se han optimizado diversos errores gráficos en las carreteras</li>
-      <li>Se ha levantado un muro invisible en todo el mapa para limitar su tamaño</li>
+      <li>Se ha modificado la cámara del Menú.</li>
+      <li>Se ha reducido el tiempo de la pantalla de carga.</li>
+      <li>Se han optimizado todos y cada uno de los sistemas del juego.</li>
+      <li>Se han adaptado todas las nuevas interfaces para otros dispositivos.</li>
+      <li>Se han optimizado diversos errores gráficos en las carreteras.</li>
+      <li>Se ha levantado un muro invisible en todo el mapa para limitar su tamaño.</li>
     </ul>
 
     <h2>Ajustes: Juego Base - Errores Solucionados</h2>
     <ul>
       <li>Se ha eliminado todo el terreno construido sustituyéndolo por un bloque normal y corriente.</li>
-      <li>Se ha eliminado la gasolinera REPSOL permanentemente</li>
-      <li>Se ha eliminado el sistema de armas "ACS"</li>
-      <li>Se ha desactivado la colisión de algunas señales de tráfico</li>
-    </ul>
-
-    <h2>Ajustes: Juego Base - Señales de Conducción</h2>
-    <ul>
-      <li>Se han agregado más señales que eran necesarias alrededor del todo el mapa.</li>
-      <li>Se han modificado algunas señales para asegurar la seguridad del conductor.</li>
+      <li>Se ha eliminado la gasolinera REPSOL permanentemente.</li>
+      <li>Se ha eliminado el sistema de armas "ACS".</li>
+      <li>Se ha desactivado la colisión de varias señales de tráfico.</li>
     </ul>
   </div>
 </body>
